--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script src="http://w.soundcloud.com/player/api.js"></script>
-  <script src="js/soundcloud.js"></script>
-  // <script>
+    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
+  <!-- // <script>
   // function play() {
   //   $(document).ready(function() {
   //               var widgetIframe = document.getElementById('sc-widget'),
@@ -50,8 +48,8 @@
   //       $('i.button').click(function() {
   //           $(this).toggleClass('fa-play-circle' 'fa-pause');
   //       });
-        
-  //   </script>
+
+  //   </script> -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -92,8 +90,8 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="javascript:void(0);" id="i.play_button" >
-                            <i id="play_button" class="i.play_button fa fa-play-circle fa-1x"></i>
+                        <a href="javascript:void(0);" id="i.play_button" class="play-button-link" >
+                            <i id="play_button" class="play-button fa fa-play-circle fa-1x"></i>
                         </a>
                     </li>
                    <!--  <li>
@@ -150,7 +148,7 @@
                 <!-- <p>John started taking drum lessons at the age of 6 from Seattle Legend Steve Smith. Russ started taking Guitar Lessons at the age of 9. The word "prodigy" is often used when describing both of them. Julio Posada, having only picked up the bass in 2009 has quickly developed a strong and fluent style that is truly his own.</p> -->
             </div>
         </div>
-        <div class="container">   
+        <div class="container">
       <div class="row">
         <div class="col-lg-4 col-sm-4 col-md-4">
           <h3 class="title-text cta-text">John</h3><hr> <br>
@@ -162,7 +160,7 @@
               <br/ >
             </p>
 
-          </div>    
+          </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-md-4">
           <h3 class="title-text cta-text">Russ</h3><hr> <br>
@@ -176,7 +174,7 @@
               <br/ >
             </p>
 
-          </div>    
+          </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-md-4">
           <h3 class="title-text cta-text">Julio</h3><hr> <br>
@@ -187,7 +185,7 @@
               Julio Posada has his own style of playing bass and loves eating granola bars during shows.
               <br/ >
             </p>
-          </div>    
+          </div>
         </div>
           </div>
         </div>
@@ -236,7 +234,7 @@
     <section id="listen" class="container content-section">
         <div class="row">
             <iframe id="sc-widget" width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/208202692&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">   </iframe>
-            
+
         </div>
     </section>
     <!-- Footer -->
@@ -257,6 +255,11 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
+
+    <script src="http://w.soundcloud.com/player/api.js"></script>
+
+    <script src="js/soundcloud.js"></script>
+
 
 </body>
 
