Play button toggles soundcloud

--- a/index.html
+++ b/index.html
@@ -21,35 +21,6 @@
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
-  <!-- // <script>
-  // function play() {
-  //   $(document).ready(function() {
-  //               var widgetIframe = document.getElementById('sc-widget'),
-  //               widget = SC.Widget(widgetIframe);
-
-  //               widget.bind(SC.Widget.Events.READY, function() {
-  //               console.log('ready');
-  //               widget.toggle()
-
-  //               var playButton = document.getElementById('i.play_button');
-  //               if (playButton.hasClass('fa-play-circle')) {
-  //                   playButton.removeClass('fa-play-circle');
-  //                   playButton.addClass('fa-pause');
-  //               }
-  //               else {
-  //                   playButton.removeClass('fa-pause');
-  //                   playButton.addClass('fa-play-circle');
-  //               }
-
-  //           });
-  //       });
-  //   }
-  //       $('i.button').click(function() {
-  //           $(this).toggleClass('fa-play-circle' 'fa-pause');
-  //       });
-
-  //   </script> -->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -91,7 +62,7 @@
                     </li>
                     <li>
                         <a href="javascript:void(0);" id="i.play_button" class="play-button-link" >
-                            <i id="play_button" class="play-button fa fa-play-circle fa-1x"></i>
+                            <i id="play_button" class="play-button fa fa-play-circle fa-1x hidden-xs"></i>
                         </a>
                     </li>
                    <!--  <li>
