Favicon and FB stuff

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+
+    <meta property="og:url" content"www.asterhousemusic.com" />
+     <meta property="og:site_name" content="Asterhouse" />
+    <meta property="fb:app_id" content="866382116731336" />
+    <meta property="og:image" content="https://www.asterhousemusic.com/img/band-water.jpg" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Asterhouse" />
+    <link rel="icon" type="image/png" href="/img/icon.ico">
 
     <title>Asterhouse</title>
 
