fixed security warning

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="///fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="///fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
 
     
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -275,7 +275,7 @@
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
 
-    <script src="http://w.soundcloud.com/player/api.js"></script>
+    <script src="///w.soundcloud.com/player/api.js"></script>
 
     <script src="js/soundcloud.js"></script>
 
