--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
                 <h2>About</h2>
-                <p>Asterhouse is a rock band formed in Kenmore in 2014. Raised on a healthy diet of The Doors, Smashing Pumpkins, and Incubus, the Thornburg brothers have been making music together since they were young kids. They later met Julio to form Asterhouse.</p>
+                <p>Asterhouse is a rock band formerly known as JAR. Raised on a healthy diet of The Doors, Smashing Pumpkins, and Incubus, the Thornburg brothers have been making music together since they were young kids. They later met Julio to form JAR and now Asterhouse.</p>
 
                 <p>They have been playing loud and energetic from the beginning. However, recently they’ve been exploring a calmer sound of music more along the lines of Elliott Smith and Wilco. As a result, their songs are made up of a variety of different sounds and moods to fit every occasion.</p>
 
