Fixed wording in end of About Me

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
                 <p>They have been playing loud and energetic from the beginning. However, recently they’ve been exploring a calmer sound of music more along the lines of Elliott Smith and Wilco. As a result, their songs are made up of a variety of different sounds and moods to fit every occasion.</p>
 
-                <p>Asterhouse has played in many popular Seattle venues such as The Crocodile and El Corazon. Click the <a class="page-scroll" href="#shows">shows</a> link to see a list of their upcoming shows and click <a href="https://soundcloud.com/john-thornburg-music-page">here</a> check out our soundcloud!</p>
+                <p>Asterhouse has played in many popular Seattle venues such as The Crocodile and El Corazon. Click the <a class="page-scroll" href="#shows">shows</a> link to see a list of their upcoming shows and click the play button at the top to hear our music! Sadly, it does not work on mobile but <a href="https://soundcloud.com/john-thornburg-music-page">Soundcloud</a> does!</p>
                 <!-- <p>John, Julio and Russ are virtual "Students" of 60's/70's Classic Rock and 90's Grunge has formed their sound into something new but strangely familiar and appeals to a very WIDE Demographic of listeners.</p> -->
                 
                 <!-- <p>John started taking drum lessons at the age of 6 from Seattle Legend Steve Smith. Russ started taking Guitar Lessons at the age of 9. The word "prodigy" is often used when describing both of them. Julio Posada, having only picked up the bass in 2009 has quickly developed a strong and fluent style that is truly his own.</p> -->
