Font size stuff for instruments in about member section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="container">
       <div class="row">
         <div class="col-lg-4 col-sm-4 col-md-4">
-          <h3 class="title-text cta-text">Russ</h3><i>Lead Guitar, Backup Vocals, Piano, Drums</i><hr> <br>
+          <h3 class="title-text cta-text">Russ</h3><i>Lead Guitar, Backup Vocals</i><hr>
           <div class="about-desc">
               <img src="img/russ-2.jpg" width="100%">
 
@@ -139,7 +139,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-md-4">
-          <h3 class="title-text cta-text">John</h3><i>Lead Vocals, Drums, Guitar</i><hr> <br>
+          <h3 class="title-text cta-text">John</h3><i>Lead Vocals, Drums, Guitar</i><hr>
           <div class="about-desc">
               <img src="img/john-1.jpg" width="100%">
               <p>
@@ -152,7 +152,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-sm-4 col-md-4">
-          <h3 class="title-text cta-text">Julio</h3><i>Bass, Backup Vocals</i><hr> <br>
+          <h3 class="title-text cta-text">Julio</h3><i>Bass, Backup Vocals</i><hr>
           <div class="about-desc">
                 <img src="img/julio-2.jpg" width="100%">
           <p>
