Made footer smaller

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         </div>
     </section>
     <!-- Footer -->
-    <footer>
+    <footer style="background-color:#222;">
         <div class="container text-center">
             <p>Copyright &copy; Asterhouse Music 2015</p>
         </div>
