Changed color of footer

--- a/index.html
+++ b/index.html
@@ -244,6 +244,18 @@
                     <li>
                         <a href="https://www.youtube.com/c/asterhouseofficial" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><i class="fa fa-youtube-play fa-fw"></i><span class="network-name"> Youtube</span></a>
                     </li>
+                    <li>
+                        <a href="https://www.amazon.com/Asterhouse/e/weirdstuff" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/amazon.png" style="height:20px;width:20px;" /><span class="network-name"> Amazon</span></a>
+                    </li>
+                    <li>
+                        <a href="https://play.google.com/store/music/artist/Asterhouse?id=xxxxxx" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/google_play_bw.png" style="height:20px;width:20px;" /><span class="network-name"> Google Play</span></a>
+                    </li>
+                    <li>
+                        <a href="https://play.spotify.com/artist/asterhouse-id?play=true&utm_source=open.spotify.com&utm_medium=open" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/spotify_gray.png" style="height20px;width:20px;" /><span class="network-name"> Spotify</span></a>
+                    </li>
+                    <li>
+                        <a href="https://itunes.apple.com/us/artist/asterhouse/idxxxxxxx?app=itunes" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/itunes-icon-gray.png" style="height:20px;width:20px;" /><span class="network-name"> iTunes</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -261,7 +273,7 @@
         </div>
     </section>
     <!-- Footer -->
-    <footer style="background-color:#222;">
+    <footer style="background-color:#1e1e1e;">
         <div class="container text-center">
             <p>Copyright &copy; Asterhouse Music 2015</p>
         </div>
