--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <!-- Footer -->
     <footer style="background-color:#1e1e1e;">
         <div class="container text-center">
-            <p>Copyright &copy; Asterhouse Music 2015</p>
+            <p>Copyright &copy; Northwest Green Records 2015</p>
         </div>
     </footer>
 
