fixed width for tour info

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2>Upcoming Shows</h2>
-                    <a href="http://www.songkick.com/artists/8593244" class="songkick-widget" data-theme="dark" data-track-button="on" data-detect-style="true" data-background-color="#000000"></a>
+                    <a href="http://www.songkick.com/artists/8593244" class="songkick-widget" style="width:75%;" data-theme="dark" data-track-button="on" data-detect-style="true" data-background-color="#000000"></a>
                     <script src="//widget.songkick.com/widget.js"></script>
                 </div>
             </div>
