Added link for spotify

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div class="container">
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2>Upcoming Shows</h2>
-                    <a href="http://www.songkick.com/artists/8593244" class="songkick-widget" style="width:75%;" data-theme="dark" data-track-button="on" data-detect-style="true" data-background-color="#000000"></a>
+                    <a href="http://www.songkick.com/artists/8593244" class="songkick-widget" style="width:76%;" data-theme="dark" data-track-button="on" data-detect-style="true" data-background-color="#000000"></a>
                     <script src="//widget.songkick.com/widget.js"></script>
                 </div>
             </div>
@@ -249,11 +249,11 @@
                     </li>
                     <li>
                         <a href="https://play.google.com/store/music/artist/Asterhouse?id=xxxxxx" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/google_play_bw.png" style="height:20px;width:20px;" /><span class="network-name"> Google Play</span></a>
-                    </li>
+                    </li> -->
                     <li>
-                        <a href="https://play.spotify.com/artist/asterhouse-id?play=true&utm_source=open.spotify.com&utm_medium=open" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/spotify_gray.png" style="height20px;width:20px;" /><span class="network-name"> Spotify</span></a>
+                        <a href="https://play.spotify.com/artist/1PSMheCYLCq1BzwX4whaD0" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/spotify_gray.png" style="height20px;width:20px;" /><span class="network-name"> Spotify</span></a>
                     </li>
-                    <li>
+                    <!-- <li>
                         <a href="https://itunes.apple.com/us/artist/asterhouse/idxxxxxxx?app=itunes" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/itunes-icon-gray.png" style="height:20px;width:20px;" /><span class="network-name"> iTunes</span></a>
                     </li> -->
                 </ul>
