--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
                     <li>
                         <a href="https://www.youtube.com/c/asterhouseofficial" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><i class="fa fa-youtube-play fa-fw"></i><span class="network-name"> Youtube</span></a>
                     </li>
-                    <!-- <li>
-                        <a href="https://www.amazon.com/Asterhouse/e/weirdstuff" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/amazon.png" style="height:20px;width:20px;" /><span class="network-name"> Amazon</span></a>
-                    </li>
                     <li>
+                        <a href="http://www.amazon.com/Asterhouse-Explicit/dp/B01567DNAA/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1442690129&sr=1-1&keywords=asterhouse" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/amazon.png" style="height:20px;width:20px;" /><span class="network-name"> Amazon</span></a>
+                    </li>
+                    <!--<li>
                         <a href="https://play.google.com/store/music/artist/Asterhouse?id=xxxxxx" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/google_play_bw.png" style="height:20px;width:20px;" /><span class="network-name"> Google Play</span></a>
                     </li> -->
                     <li>
