--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
                     <li>
                         <a href="https://play.spotify.com/artist/1PSMheCYLCq1BzwX4whaD0" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/spotify_gray.png" style="height20px;width:20px;" /><span class="network-name"> Spotify</span></a>
                     </li>
-                    <!-- <li>
-                        <a href="https://itunes.apple.com/us/artist/asterhouse/idxxxxxxx?app=itunes" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/itunes-icon-gray.png" style="height:20px;width:20px;" /><span class="network-name"> iTunes</span></a>
-                    </li> -->
+                    <li>
+                        <a href="https://itunes.apple.com/us/artist/asterhouse/id1038760859" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/itunes-icon-gray.png" style="height:20px;width:20px;" /><span class="network-name"> iTunes</span></a>
+                    </li>
                 </ul>
             </div>
         </div>
