--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
                     <li>
                         <a href="http://www.amazon.com/Asterhouse-Explicit/dp/B01567DNAA/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1442690129&sr=1-1&keywords=asterhouse" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/amazon.png" style="height:20px;width:20px;" /><span class="network-name"> Amazon</span></a>
                     </li>
-                    <!--<li>
-                        <a href="https://play.google.com/store/music/artist/Asterhouse?id=xxxxxx" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/google_play_bw.png" style="height:20px;width:20px;" /><span class="network-name"> Google Play</span></a>
-                    </li> -->
+                    <li>
+                        <a href="https://play.google.com/music/m/A5tvkmddxo3neqmpb3lczodo3oq?t=Asterhouse" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/google_play_bw.png" style="height:20px;width:20px;" /><span class="network-name"> Google Play</span></a>
+                    </li>
                     <li>
                         <a href="https://play.spotify.com/artist/1PSMheCYLCq1BzwX4whaD0" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/spotify_gray.png" style="height20px;width:20px;" /><span class="network-name"> Spotify</span></a>
                     </li>
