--- a/index.html
+++ b/index.html
@@ -60,21 +60,16 @@
                         <a class="page-scroll" href="#video">Video</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#shows">Shows</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#shows">Shows</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
                        <div class="page-scroll" href="#listen"></div>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#listen">
-                            <i class="play-button fa fa-play-circle fa-1x"></i>
-                        </a>
                     </li>
                 </ul>
             </div>
@@ -126,9 +121,25 @@
         </div>
     </section>
 
+    <!-- Shows Section -->
+    <section id="shows" class="content-section text-center">
+        <div class="show-section">
+            <div class="container">
+                <div class="col-lg-10 col-lg-offset-1">
+                <br/>
+                    <h2>Upcoming Shows</h2>
+                    <a href="http://www.songkick.com/artists/8593244" class="songkick-widget" style="width:76%;" data-theme="dark" data-track-button="on" data-detect-style="true" data-background-color="#000000"></a>
+                    <script src="//widget.songkick.com/widget.js"></script>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1">
+            <br/>
                 <h2>About</h2>
                 <p align="justify">Asterhouse is a rock band based out of Kenmore, Washington. In 2009, John and Russ Thornburg joined up with Julio Posada to form a band then known as JAR. Asterhouse as performed in several major music venues including The Crocodile in Seattle, Triplehorn Brewery in Woodinville, and make.shift in Bellingham. To see a list of their upcoming shows, click the <a class="page-scroll" href="#shows">shows</a> link.</p>
 
@@ -141,14 +152,11 @@
                     <h3 class="title-text cta-text">Russ</h3><i>Lead Guitar, Backup Vocals</i><hr>
                     <div class="about-desc">
                         <img src="img/russ-2.jpg" width="100%">
-
                         <p class="paragraph-text">
-
                             <br/>
                             Enthusiastic and brimming with youthful talent, Russ Thornburg has been playing guitar since he was big enough to hold it. He can often be found listening to his favorite albums from the Doors and Incubus on repeat while his family tries to convince him to turn the volume down a couple notches. Russ masterfully combines the sounds of guitar legends like Jimmy Page and Neil Young to create a style of his own. Russ’s powerful guitar lines breathe life into Asterhouse’s songs.
                             <br/>
                         </p>
-
                     </div>
                 </div>
                 <div class="col-lg-4 col-sm-4 col-md-4">
@@ -175,20 +183,6 @@
                             <br/>
                         </p>
                     </div>
-                </div>
-            </div>
-        </div>
-        <hr />
-    </section>
-
-    <!-- Download Section -->
-    <section id="shows" class="content-section text-center">
-        <div class="show-section">
-            <div class="container">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <h2>Upcoming Shows</h2>
-                    <a href="http://www.songkick.com/artists/8593244" class="songkick-widget" style="width:76%;" data-theme="dark" data-track-button="on" data-detect-style="true" data-background-color="#000000"></a>
-                    <script src="//widget.songkick.com/widget.js"></script>
                 </div>
             </div>
         </div>
@@ -260,7 +254,7 @@
                         <a href="https://www.youtube.com/c/asterhouseofficial" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><i class="fa fa-youtube-play fa-fw"></i><span class="network-name"> Youtube</span></a>
                     </li>
                     <li>
-                        <a href="http://www.amazon.com/Asterhouse-Explicit/dp/B01567DNAA/ref=sr_1_1?s=dmusic&ie=UTF8&qid=1442690129&sr=1-1&keywords=asterhouse" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/amazon.png" style="height:20px;width:20px;" /><span class="network-name"> Amazon</span></a>
+                        <a href="https://music.amazon.com/artists/B01566LG00/CATALOG" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/amazon.png" style="height:20px;width:20px;" /><span class="network-name"> Amazon</span></a>
                     </li>
                     <li>
                         <a href="https://play.google.com/music/m/A5tvkmddxo3neqmpb3lczodo3oq?t=Asterhouse" class="btn btn-default btn-lg" style="display: inline-block;width:180px;"><img src="img/music-icons/google_play_bw.png" style="height:20px;width:20px;" /><span class="network-name"> Google Play</span></a>
@@ -276,21 +270,10 @@
         </div>
         </hr>
     </section>
-    <section id="listen" class="container content-section text-center">
-        <div class="listen-section">
-            <hr>
-                <h2>Listen</h2>
-                <p align="center">
-                    <iframe class="band-camp" src="https://bandcamp.com/EmbeddedPlayer/album=856693072/size=large/bgcol=333333/linkcol=42dca3/artwork=small/transparent=true/" seamless><a href="http://asterhouse.bandcamp.com/album/asterhouse">Asterhouse</a></iframe>
-                </p>
-            <!-- <iframe id="sc-widget" width="0" height="0" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/208202692&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false">   </iframe> -->
-            </hr>
-        </div>
-    </section>
     <!-- Footer -->
     <footer style="background-color:#1e1e1e;">
         <div class="container text-center">
-            <p>Copyright &copy; Asterhouse 2016</p>
+            <p>Copyright &copy; Asterhouse 2018</p>
         </div>
     </footer>
 
